# libanekdoty

./: README.md  pyproject.toml
libanekdoty/: __init__.py  categories.py  exception.py  jokes.py
