[build-system]
requires = ["setuptools>=61.0","wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "libanekdoty"
version = "0.1"
authors = [
  { name="Ivan Degtyarev" },
]

description = "Library for parse anekdoty.ru"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
"beautifulsoup4",
"requests"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
